# another-portfolio

./: .gitignore  README.md  pyproject.toml
docs/: PRD.md  factor_investing_summary.md  five_factor_summary.txt  fpa_summary.txt
resources/: investment_philosophy.md  philosophy_links.md  tool_links.md  tools.md
